--- a/001-docker.conf
+++ b/001-docker.conf
@@ -1,12 +1,15 @@
 <VirtualHost *:80>
+
 	ServerAdmin ${APACHE_SERVERADMIN}
 
 	ServerName ${APACHE_SERVERNAME}
+
 	ServerAlias ${APACHE_SERVERALIAS}
 
 	DocumentRoot ${APACHE_DOCUMENTROOT}
+	
 	<Directory ${APACHE_DOCUMENTROOT}>
-		Options Indexes FollowSymLinks
+		Options -Indexes FollowSymLinks
 		AllowOverride All
 		Order allow,deny
 		Allow from all
