--- a/001-docker-old.conf
+++ b/001-docker-old.conf
@@ -1,32 +1,25 @@
 <VirtualHost *:80>
+
 	ServerAdmin ${APACHE_SERVERADMIN}
 
-	DocumentRoot /var/www
+	ServerName ${APACHE_SERVERNAME}
 
-	<Directory /var/www/>
+	ServerAlias ${APACHE_SERVERALIAS}
+
+	DocumentRoot ${APACHE_DOCUMENTROOT}
+	
+	<Directory ${APACHE_DOCUMENTROOT}>
 		Options -Indexes FollowSymLinks
 		AllowOverride All
 		Order allow,deny
 		Allow from all
 	</Directory>
 
-#	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
-#	<Directory "/usr/lib/cgi-bin">
-#		AllowOverride None
-#		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-#		Order allow,deny
-#		Allow from all
-#	</Directory>
-
 	ErrorLog ${APACHE_LOG_DIR}/error.log
-
+	
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
 	LogLevel warn
 
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
-
-	ServerName ${APACHE_SERVERNAME}
-	ServerAlias ${APACHE_SERVERALIAS}
-
 </VirtualHost>
