Mejorada la gestión del 403/403.

--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,9 @@
 
 	DocumentRoot /var/www
 
+    ErrorDocument 403 /404.php
+    ErrorDocument 404 /404.php
+
 	<Directory /var/www/>
 		Options -Indexes FollowSymLinks
 		AllowOverride All
