Tenía un error en Options.  Solución aquí: http://httpd.apache.org/docs/2.4/mod/core.html#options

--- a/000-default.conf
+++ b/000-default.conf
@@ -7,7 +7,7 @@
     ErrorDocument 404 /404.php
 
 	<Directory /var/www/>
-		Options -Indexes FollowSymLinks
+		Options -Indexes +FollowSymLinks
 		AllowOverride All
 		Order allow,deny
 		Allow from all
