--- a/000-default.conf
+++ b/000-default.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
 	ServerAdmin ${APACHE_SERVERADMIN}
 
-	DocumentRoot /var/www
+	DocumentRoot /var/www/html
 
     ErrorDocument 403 /404.php
     ErrorDocument 404 /404.php
 
-	<Directory /var/www/>
+	<Directory /var/www/html/>
 		Options -Indexes +FollowSymLinks
 		AllowOverride All
 		Order allow,deny
